feat: add options
